comments/whitespace/who cares man we're all going to die

--- a/style.css
+++ b/style.css
@@ -150,7 +150,7 @@ img {
 
 }
 
-@media (max-width: 490px){
+@media (max-width: 490px){ /* Mid-sized Phones */
     h1 {
         font-size: 1.5em;
     }
@@ -160,10 +160,11 @@ img {
     }
 }
 
-@media (max-width: 332px){
+@media (max-width: 332px){ /* Skinny phones */
     .sidebar {
         text-align: right;
     }
+
     .sidebar img {
         min-width: 100px;
     }
